auto commit version 3.5